--- a/popup.html
+++ b/popup.html
@@ -4,100 +4,228 @@
     <meta charset="UTF-8" />
     <title>ChatGPT Speedup</title>
     <link rel="stylesheet" href="popup.css">
-    
   </head>
   <body>
-    <h3>ChatGPT Speedup</h3>
+    <div class="container">
+      <!-- Header -->
+      <div class="header">
+        <h3>⚡ ChatGPT Speedup</h3>
+      </div>
 
-    <label for="keepN">Messages to keep visible</label>
-    <div style="display: flex; gap: 8px; align-items: center;">
-      <input id="keepN" type="number" min="1" step="1" style="flex: 1;" />
-      <select id="keepNPreset" style="flex: 1;">
-        <option value="">Custom</option>
-        <option value="10">10 messages</option>
-        <option value="50">50 messages</option>
-        <option value="100">100 messages</option>
-        <option value="999999">Show All</option>
-      </select>
-    </div>
+      <!-- General Section -->
+      <div class="section">
+        <div class="section-header" data-section="general">
+          <span class="section-icon">📌</span>
+          <span class="section-title">General</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="general-content">
+          <div class="setting-group">
+            <label for="presetProfile">Profile
+              <span class="info-tooltip" title="Quick presets for different use cases">ⓘ</span>
+            </label>
+            <select id="presetProfile" class="select-full">
+              <option value="">Custom</option>
+              <option value="performance">⚡ Performance (5 visible, hidden DOM)</option>
+              <option value="research">📚 Research (50 visible, storage)</option>
+              <option value="full">💯 Full History (no archiving)</option>
+            </select>
+          </div>
 
-    <label for="mode">
-      Archive mode
-      <span class="info-icon" title="Storage mode: Serializes messages to browser storage (uses less memory).&#10;Hidden mode: Keeps messages in hidden DOM (faster access but uses more memory).">ⓘ</span>
-    </label>
-    <select id="mode">
-      <option value="storage">Serialize to storage (lighter)</option>
-      <option value="hidden">Move to hidden DOM (faster)</option>
-    </select>
-
-    <label for="storageCap">Max archived messages</label>
-    <input id="storageCap" type="number" min="50" step="50" title="Maximum messages to keep in storage" />
-
-    <div class="theme-row">
-      <label for="themeSelect">Theme:</label>
-      <select id="themeSelect">
-        <option value="auto">Auto (system)</option>
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-      </select>
-    </div>
-
-    <div class="checkbox-group">
-      <label class="checkbox-label">
-        <input type="checkbox" id="pillEnabled">
-        Show floating pill
-      </label>
-      <label class="checkbox-label">
-        <input type="checkbox" id="debugLogs">
-        Enable debug logs
-      </label>
-      <label class="checkbox-label">
-        <input type="checkbox" id="autoCollapse">
-        Auto-collapse after 5 min inactive
-      </label>
-    </div>
-
-    <label for="searchArchive">Search messages</label>
-    <div class="search-container">
-      <input type="search" id="searchArchive" placeholder="Search text..." style="flex:1">
-      <button id="searchPrevBtn" title="Previous match">◀</button>
-      <button id="searchBtn" title="Search">🔍</button>
-      <button id="searchNextBtn" title="Next match">▶</button>
-    </div>
-    <div id="searchResults" style="font-size: 11px; color: #666; margin-top: 4px; min-height: 16px;"></div>
-
-    <div id="conversation-stats">Loading stats...</div>
-
-    <div class="row">
-      <button id="apply">Apply Settings</button>
-      <button id="refreshTabs" title="Ask all ChatGPT tabs to refresh">Refresh Tabs</button>
-    </div>
-
-    <div class="row-3">
-      <div style="position: relative; display: inline-block;">
-        <button id="exportArchive" title="Export conversation">Export ▼</button>
-        <div id="exportMenu" class="export-menu" style="display: none;">
-          <button class="export-option" data-format="json">JSON</button>
-          <button class="export-option" data-format="markdown">Markdown</button>
-          <button class="export-option" data-format="txt">Text</button>
-          <button class="export-option" data-format="html">HTML</button>
+          <div class="setting-group">
+            <label for="keepN">Messages to keep visible</label>
+            <div class="dual-input">
+              <input id="keepN" type="number" min="1" step="1" class="input-small" />
+              <select id="keepNPreset" class="select-small">
+                <option value="">Custom</option>
+                <option value="10">10</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+                <option value="999999">Show All</option>
+              </select>
+            </div>
+          </div>
+          
+          <div class="setting-group">
+            <label for="themeSelect">Theme</label>
+            <select id="themeSelect" class="select-full">
+              <option value="auto">Auto (system)</option>
+              <option value="light">Light</option>
+              <option value="dark">Dark</option>
+            </select>
+          </div>
         </div>
       </div>
-      <button id="importArchive" title="Import archived messages">Import</button>
-      <button id="clearArchive" title="Clear archived messages">Clear</button>
-      <input type="file" id="importFile" accept=".json" style="display:none">
-    </div>
 
-    <div class="info-box">
-      <div style="font-size: 11px; line-height: 1.4;">
-        <strong>Pill controls:</strong><br>
-        Click: +5 messages • Shift+Click: −5 messages<br>
-        Alt+Drag: Move pill position
+      <!-- Archiving Section -->
+      <div class="section">
+        <div class="section-header" data-section="archiving">
+          <span class="section-icon">📦</span>
+          <span class="section-title">Archiving</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="archiving-content">
+          <div class="setting-group">
+            <label for="mode">
+              Archive mode
+              <span class="info-tooltip" title="Storage: Serializes to browser storage (uses less memory)&#10;Hidden: Keeps in hidden DOM (faster but uses more memory)">ⓘ</span>
+            </label>
+            <select id="mode" class="select-full">
+              <option value="storage">Serialize to storage (lighter)</option>
+              <option value="hidden">Move to hidden DOM (faster)</option>
+            </select>
+          </div>
+
+          <div class="setting-group">
+            <label for="storageCap">Max archived messages</label>
+            <input id="storageCap" type="number" min="50" step="50" class="input-full" />
+          </div>
+
+          <div class="setting-group">
+            <label class="checkbox-label">
+              <input type="checkbox" id="autoCollapse">
+              <span class="checkbox-icon">⏱️</span>
+              <span>Auto-collapse after 5 min inactive</span>
+            </label>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="muted" style="margin-top:12px;text-align:center;">
-      Your messages stay on your device • v0.1.2
+      <!-- Interface Section -->
+      <div class="section">
+        <div class="section-header" data-section="interface">
+          <span class="section-icon">👁️</span>
+          <span class="section-title">Interface</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="interface-content">
+          <div class="setting-group">
+            <label class="checkbox-label">
+              <input type="checkbox" id="pillEnabled">
+              <span class="checkbox-icon">💊</span>
+              <span>Show floating pill</span>
+            </label>
+          </div>
+
+          <div class="setting-group">
+            <label class="checkbox-label">
+              <input type="checkbox" id="debugLogs">
+              <span class="checkbox-icon">🐛</span>
+              <span>Enable debug logs</span>
+            </label>
+          </div>
+
+          <div class="pill-controls">
+            <div class="controls-title">Pill controls:</div>
+            <div class="controls-list">
+              <div class="control-item">• Click → +5 messages</div>
+              <div class="control-item">• Shift+Click → −5 messages</div>
+              <div class="control-item">• Alt+Drag → Move pill</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Search Section -->
+      <div class="section">
+        <div class="section-header" data-section="search">
+          <span class="section-icon">🔍</span>
+          <span class="section-title">Search</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="search-content">
+          <div class="search-container">
+            <input type="search" id="searchArchive" placeholder="Search messages..." class="search-input">
+            <button id="searchBtn" class="icon-btn" title="Search">🔎</button>
+          </div>
+          <div class="search-options">
+            <label class="checkbox-label">
+              <input type="checkbox" id="regexSearch">
+              <span>Regex</span>
+            </label>
+            <select id="searchFilter" class="search-filter">
+              <option value="">All messages</option>
+              <option value="from:me">From me</option>
+              <option value="from:assistant">From ChatGPT</option>
+            </select>
+          </div>
+          <div class="search-nav">
+            <button id="searchPrevBtn" class="nav-btn">◀ Prev</button>
+            <div id="searchResults" class="search-results"></div>
+            <button id="searchNextBtn" class="nav-btn">Next ▶</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Stats Section -->
+      <div class="section">
+        <div class="section-header" data-section="stats">
+          <span class="section-icon">📊</span>
+          <span class="section-title">Stats</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="stats-content">
+          <div id="conversation-stats" class="stats-panel">
+            <div class="stat-row">
+              <span class="stat-label">Visible:</span>
+              <span class="stat-value" id="stat-visible">-</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-label">Total:</span>
+              <span class="stat-value" id="stat-total">-</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-label">Archived:</span>
+              <span class="stat-value" id="stat-archived">-</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-label">Archived %:</span>
+              <span class="stat-value" id="stat-percent">-</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-label">Memory saved:</span>
+              <span class="stat-value" id="stat-memory">-</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Data Section -->
+      <div class="section">
+        <div class="section-header" data-section="data">
+          <span class="section-icon">💾</span>
+          <span class="section-title">Data</span>
+          <span class="collapse-icon">▼</span>
+        </div>
+        <div class="section-content" id="data-content">
+          <div class="button-row">
+            <div class="export-wrapper">
+              <button id="exportArchive" class="action-btn">Export ▼</button>
+              <div id="exportMenu" class="export-menu">
+                <button class="export-option" data-format="json">JSON</button>
+                <button class="export-option" data-format="markdown">Markdown</button>
+                <button class="export-option" data-format="txt">Text</button>
+                <button class="export-option" data-format="html">HTML</button>
+              </div>
+            </div>
+            <button id="importArchive" class="action-btn">Import</button>
+            <button id="clearArchive" class="action-btn danger">Clear</button>
+            <input type="file" id="importFile" accept=".json" style="display:none">
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <div class="footer">
+        <div class="footer-top">
+          <span class="version">Version v1.3.0</span>
+          <span class="separator">•</span>
+          <span class="privacy">Messages stay on your device</span>
+        </div>
+        <div class="disclaimer">
+          If you don't see changes, try reloading the ChatGPT page
+        </div>
+      </div>
     </div>
 
     <script src="popup.js"></script>
