--- a/popup.html
+++ b/popup.html
@@ -201,7 +201,7 @@
           <div class="button-row">
             <div class="export-wrapper">
               <button id="exportArchive" class="action-btn">Export ▼</button>
-              <div id="exportMenu" class="export-menu">
+              <div id="exportMenu" class="export-menu" style="display: none;">
                 <button class="export-option" data-format="json">JSON</button>
                 <button class="export-option" data-format="markdown">Markdown</button>
                 <button class="export-option" data-format="txt">Text</button>
