--- a/popup.html
+++ b/popup.html
@@ -184,7 +184,8 @@
             </div>
             <div class="stat-row">
               <span class="stat-label">Memory saved:</span>
-              <span class="stat-value" id="stat-memory">-</span>
+              <span class="stat-value" id="stat-memory" 
+                    title="Calculated based on actual content size: (total char count - visible char count) / total char count. Hidden messages (archived) are removed from DOM but kept in browser memory, reducing rendering overhead and improving ChatGPT performance.">-</span>
             </div>
           </div>
         </div>
